[gd_scene load_steps=2 format=3 uid="uid://6o01qs7b88n5"]

[ext_resource type="Script" uid="uid://bcjmu2wl1rccc" path="res://scenes/ui/MainMenu.gd" id="1_vjtqc"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_vjtqc")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Background"]
layout_mode = 0
offset_right = 332.0
offset_bottom = 381.0
color = Color(0.7517784, 0.47159922, 0.37025267, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Title" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 48
text = "День мёрфи?"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="ContinueButton" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
text = "1"

[node name="NewGameButton" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
text = "2"

[node name="SettingsButton" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
text = "3"

[node name="QuitButton" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
text = "4"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
